Fixed subpixel precision bug when the canvas or a dab is mirrored

When the dab is mirrored, the subpixel offset should be inverted.

BUG:323245